--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/tomoakley/l2task5/issues"
   },
   "homepage": "https://github.com/tomoakley/l2task5#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+  },
   "devDependencies": {
     "ejs": "^2.4.1",
     "express": "^4.13.4",
