--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   },
   "homepage": "https://github.com/tomoakley/l2task5#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "ejs": "^2.4.1"
   },
   "devDependencies": {
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.1",
     "gulp-notify": "^2.2.0",
